# fgsetxml

./: CMakeLists.txt  README.md  version.txt
src/: fgsetxml.cxx  xmlEnum.cxx
utils/: fgs_utils.cxx  fgs_utils.hxx  sprtf.cxx  sprtf.hxx
xmlParser/: AFPL-license.txt  xmlTest.cpp
zip/: README.md
